RC-2004-03-06-1: Bugfix:    nice values should not be less than zero on Linux,
                            merging the fix from maintrunk to 5.3
                 Changed:   execd

RC-2004-03-06-0: Bugfix:    deny jobnames with a colon
                 Issue:     314
                 Review:    RC, BC (patch from BC)
                 Changed:   qmaster

AH-2004-03-04-1: Bugfix:    qselect/qstat -l selection wrongly considers 
                            load and utilization
                 Issue:     771
                 Review:    AS

SD-2004-02-27-0: Bugfix:    Fixed checking of read return code
                 Changed:   execd
                 Issue:     713

SD-2004-02-25-0: Bugfix:    Fixed file descriptor leak which caused
                            execd to run out of file descriptors
                 Changed:   execd
                 Issue:     713

SG-2004-02-25-1: Bugfix:    fixed the time bases for YY specification. It referes to
                            to the range of 1970 till 2069.
                 Chaged:    qacct, qsub, qalter,...
                 Issue:     709

BD-2004-02-24-2: Bugfix:    If we're going to hardcode a path to tcsh
                            in qtcsh, we should use the system tcsh in
                            /bin/tcsh.
		 Changed:   qtcsh

BD-2004-02-24-1: Bugfix:    Fix missing closing " in previous commit.

BD-2004-02-24-0: Bugfix:    Clean up FreeBSD alpha, amd64, ia64, and
                            sparc64 qmake files.  Should let them build
                            somewhere other then my personal machines.
                 Changed:   qmake

RC-2004-02-24-0: Bugfix:    A small bug in glibc recognition code
                 Changed:   arch
                 Review:    AS

JG-2004-02-19-1: Bugfix:    Fixed lGetElemHost[First|Next] in case no hashtable
                            was defined for the queried attribute.
                 Changed:   all (libcull)
                 Review:    AH
