@@ -1,3 +1,9 @@
+SG-2004-03-10-0: Bugfix:    scheduler crashed during functional ticket computation
+                            on linux AMD64 
+                 Changed:   scheduler
+                 Review:    CR
+                 Issue:     820
+
 RC-2004-03-06-1: Bugfix:    nice values should not be less than zero on Linux,
                             merging the fix from maintrunk to 5.3
                  Changed:   execd
